Refatoração do backend para agrupar por dominio